data/derived/comb/progs/unify/prog3575.ml.out
Characters 55-57:
  wwhile (me, 2);;
          ^^
Error: This expression has type int -> int * bool
       but an expression was expected of type bool
